src/github.com/ebay/beam/query/parser/testdata/select/errors/agg_func.res
Query:
SELECT (BOB(?a) as ?Bob) 
WHERE {
?a ?b ?c
}

Parsed:
Error: unable to parse query: line 1 column 9: expected COUNT
